[gd_scene load_steps=41 format=3 uid="uid://cc1m2a1obsyn4"]

[ext_resource type="Script" path="res://addons/fpc/character.gd" id="1_0t4e8"]
[ext_resource type="Script" path="res://scripts/player_attributes.gd" id="2_pdks7"]
[ext_resource type="AudioStream" uid="uid://bikrn5ahmo121" path="res://audio/footsteps/marble_01.wav" id="2_u1ayv"]
[ext_resource type="Texture2D" uid="uid://dsv4jm4vydflb" path="res://textures/orange.png" id="3_0viol"]
[ext_resource type="AudioStream" uid="uid://cluaor3yjnikt" path="res://audio/footsteps/marble_01_a.wav" id="3_1ash8"]
[ext_resource type="Script" path="res://scripts/body_part_slot.gd" id="3_tdpk7"]
[ext_resource type="Script" path="res://addons/fpc/EditorModule.gd" id="3_v3ckk"]
[ext_resource type="Script" path="res://addons/fpc/debug.gd" id="3_x1wcc"]
[ext_resource type="AudioStream" uid="uid://dhgw4xsjt7y0e" path="res://audio/footsteps/marble_01_b.wav" id="4_8gj0d"]
[ext_resource type="PackedScene" uid="uid://bw08w8xqd8iuw" path="res://body_parts/basic_leg.tscn" id="4_i2ob0"]
[ext_resource type="PackedScene" uid="uid://brqf40sqbguse" path="res://body_parts/basic_eye.tscn" id="4_yodar"]
[ext_resource type="PackedScene" uid="uid://byitmlabhckqr" path="res://body_parts/basic_arm.tscn" id="5_1g67u"]
[ext_resource type="AudioStream" uid="uid://qrhmujpthls6" path="res://audio/footsteps/marble_01_c.wav" id="5_cdurt"]
[ext_resource type="AudioStream" uid="uid://djgw8dicwbqam" path="res://audio/footsteps/marble_01_d.wav" id="6_ql40s"]
[ext_resource type="AudioStream" uid="uid://3010wytmnpel" path="res://audio/footsteps/marble_01_e.wav" id="7_bn6wv"]
[ext_resource type="PackedScene" uid="uid://bi10v3naxamia" path="res://prefabs/revolver.tscn" id="8_jtpff"]
[ext_resource type="Texture2D" uid="uid://27x2i4l0loyp" path="res://textures/border.png" id="10_sfnr0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dve7t"]
albedo_texture = ExtResource("3_0viol")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kp17n"]
albedo_color = Color(0.909804, 0.596078, 0, 1)
clearcoat_enabled = true
clearcoat_roughness = 0.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jw1de"]
material = SubResource("StandardMaterial3D_kp17n")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uy03j"]

[sub_resource type="Animation" id="Animation_j8cx7"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Collision:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}

[sub_resource type="Animation" id="Animation_5ec5e"]
resource_name = "crouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.75, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Collision:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.75, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mesh:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Collision:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1.12508, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5e5t5"]
_data = {
"RESET": SubResource("Animation_j8cx7"),
"crouch": SubResource("Animation_5ec5e")
}

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_keuh2"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
sky_energy_multiplier = 0.0
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ei6dw"]
sky_material = SubResource("ProceduralSkyMaterial_keuh2")

[sub_resource type="Environment" id="Environment_y23vq"]
background_energy_multiplier = 0.0
sky = SubResource("Sky_ei6dw")
ambient_light_source = 1
ambient_light_energy = 0.0
reflected_light_source = 1
tonemap_mode = 3
ssao_enabled = true
sdfgi_enabled = true
sdfgi_use_occlusion = true
sdfgi_read_sky_light = false
glow_enabled = true
glow_intensity = 1.2
glow_bloom = 0.17
fog_mode = 1
fog_density = 1.0
fog_depth_curve = 4.75683
fog_depth_begin = 1.0
fog_depth_end = 20.0
volumetric_fog_enabled = true
volumetric_fog_density = 0.0921
volumetric_fog_sky_affect = 0.0
adjustment_enabled = true
adjustment_brightness = 0.8
adjustment_contrast = 1.2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_67aq3"]
dof_blur_near_distance = 0.64
dof_blur_near_transition = -1.0
dof_blur_amount = 0.02

[sub_resource type="Animation" id="Animation_gh776"]
resource_name = "RESET"
length = 0.001
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_8ku67"]
resource_name = "sprint"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 1, 0, 1, 0),
"points": PackedFloat32Array(0.06, -0.25, 0, 0.25, -0.01, 0, 0, 0, 0, 0, -0.06, -0.25, 0.01, 0.25, 0.01, 0, 0, 0, 0, 0, 0.06, -0.25, -0.01, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.05, -0.25, 0, 0.2, -0.01, 0, -0.2, 0.000186046, 0.2, 0.000186046, 0.05, -0.2, -0.01, 0.2, -0.01, 0, -0.2, 0, 0.2, 0, 0.05, -0.2, -0.01, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="Animation" id="Animation_lrqmv"]
resource_name = "walk"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 1, 0, 1, 0),
"points": PackedFloat32Array(0.04, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, -0.04, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, 0.04, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-0.05, -0.25, 0, 0.2, 0.005, 0, -0.2, 0.000186046, 0.2, 0.000186046, -0.05, -0.2, 0.005, 0.2, 0.005, 0, -0.2, 0, 0.2, 0, -0.05, -0.2, 0.005, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0unb"]
_data = {
"RESET": SubResource("Animation_gh776"),
"sprint": SubResource("Animation_8ku67"),
"walk": SubResource("Animation_lrqmv")
}

[sub_resource type="Animation" id="Animation_fvvjq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_s07ye"]
resource_name = "jump"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0349066, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l1rph"]
resource_name = "land_left"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0349066, 0, 0.0174533), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vsknp"]
resource_name = "land_right"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0349066, 0, -0.0174533), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qeg5r"]
_data = {
"RESET": SubResource("Animation_fvvjq"),
"jump": SubResource("Animation_s07ye"),
"land_left": SubResource("Animation_l1rph"),
"land_right": SubResource("Animation_vsknp")
}

[sub_resource type="Theme" id="Theme_wdf0f"]
MarginContainer/constants/margin_bottom = 10
MarginContainer/constants/margin_left = 10
MarginContainer/constants/margin_right = 10
MarginContainer/constants/margin_top = 10

[sub_resource type="SphereShape3D" id="SphereShape3D_k4wwl"]

[sub_resource type="Environment" id="Environment_m2pvt"]
ambient_light_source = 2
ambient_light_color = Color(0.306923, 0.306923, 0.306923, 1)
reflected_light_source = 1
tonemap_mode = 3
adjustment_enabled = true
adjustment_brightness = 1.65
adjustment_contrast = 1.04
adjustment_saturation = 2.27

[node name="Character" type="CharacterBody3D" node_paths=PackedStringArray("HEAD", "CAMERA", "HEADBOB_ANIMATION", "JUMP_ANIMATION", "CROUCH_ANIMATION", "COLLISION_MESH")]
script = ExtResource("1_0t4e8")
footstep_sounds = Array[AudioStream]([ExtResource("2_u1ayv"), ExtResource("3_1ash8"), ExtResource("4_8gj0d"), ExtResource("5_cdurt"), ExtResource("6_ql40s"), ExtResource("7_bn6wv")])
stop_walking_sounds = Array[AudioStream]([ExtResource("2_u1ayv")])
jump_velocity = 3.3
mouse_sensitivity = 0.12
HEAD = NodePath("Head")
CAMERA = NodePath("Head/Camera")
HEADBOB_ANIMATION = NodePath("Head/HeadbobAnimation")
JUMP_ANIMATION = NodePath("Head/JumpAnimation")
CROUCH_ANIMATION = NodePath("CrouchAnimation")
COLLISION_MESH = NodePath("Collision")

[node name="PlayerAttributes" type="Node" parent="."]
script = ExtResource("2_pdks7")

[node name="LeftEyeSlot" type="Node" parent="PlayerAttributes"]
script = ExtResource("3_tdpk7")
part_type = "eye"
slot_name = "left eye"

[node name="BasicArm" parent="PlayerAttributes/LeftEyeSlot" instance=ExtResource("4_yodar")]
part_type = [""]

[node name="RightEyeSlot" type="Node" parent="PlayerAttributes"]
script = ExtResource("3_tdpk7")
part_type = "eye"
slot_name = "right eye"

[node name="BasicArm" parent="PlayerAttributes/RightEyeSlot" instance=ExtResource("4_yodar")]
part_type = [""]

[node name="LeftArmSlot" type="Node" parent="PlayerAttributes"]
script = ExtResource("3_tdpk7")
part_type = "arm"
slot_name = "left_arm"

[node name="BasicArm" parent="PlayerAttributes/LeftArmSlot" instance=ExtResource("5_1g67u")]
part_type = [""]

[node name="RightArmSlot" type="Node" parent="PlayerAttributes"]
script = ExtResource("3_tdpk7")
part_type = "arm"
slot_name = "right arm"

[node name="BasicArm" parent="PlayerAttributes/RightArmSlot" instance=ExtResource("5_1g67u")]
part_type = [""]

[node name="LeftLegSlot" type="Node" parent="PlayerAttributes"]
script = ExtResource("3_tdpk7")
part_type = "leg"
slot_name = "left leg"

[node name="BasicLeg" parent="PlayerAttributes/LeftLegSlot" instance=ExtResource("4_i2ob0")]
part_type = [""]

[node name="RightLegSlot" type="Node" parent="PlayerAttributes"]
script = ExtResource("3_tdpk7")
part_type = "leg"
slot_name = "right leg"

[node name="BasicLeg" parent="PlayerAttributes/RightLegSlot" instance=ExtResource("4_i2ob0")]
part_type = [""]

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
material_override = SubResource("StandardMaterial3D_dve7t")
mesh = SubResource("CapsuleMesh_jw1de")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_uy03j")

[node name="CrouchAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5e5t5")
}

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera" type="Camera3D" parent="Head"]
cull_mask = 1048573
environment = SubResource("Environment_y23vq")
attributes = SubResource("CameraAttributesPractical_67aq3")
current = true

[node name="HeadbobAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_o0unb")
}
blend_times = [&"RESET", &"RESET", 0.5, &"RESET", &"walk", 0.5, &"walk", &"RESET", 0.5]

[node name="JumpAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_qeg5r")
}
speed_scale = 4.0

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="DebugPanel" type="PanelContainer" parent="UserInterface"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 453.0
offset_bottom = 50.0
theme = SubResource("Theme_wdf0f")
script = ExtResource("3_x1wcc")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="Border" type="TextureRect" parent="UserInterface"]
texture_filter = 1
layout_mode = 1
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(0.667, 0.667)
texture = ExtResource("10_sfnr0")

[node name="CrouchCeilingDetection" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_k4wwl")
target_position = Vector3(0, 0.5, 0)

[node name="EditorModule" type="Node" parent="."]
script = ExtResource("3_v3ckk")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55327, 0)
light_energy = 0.03

[node name="PlayerAudio" type="AudioStreamPlayer3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4293918722
size = Vector2i(768, 432)
render_target_update_mode = 0

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
visible = false
cull_mask = 2
environment = SubResource("Environment_m2pvt")
fov = 42.0

[node name="Revolver" parent="SubViewportContainer/SubViewport/Camera3D" instance=ExtResource("8_jtpff")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.13)
visible = false
